--- a/notebooks/ModelCreditCardDefault.ipynb
+++ b/notebooks/ModelCreditCardDefault.ipynb
@@ -26,7 +26,7 @@
    },
    "outputs": [],
    "source": [
-    "## pip install woe lightgbm catboost xgboost boruta kds"
+    "## pip install xgboost"
    ]
   },
   {
