--- a/notebooks/ModelCreditCardDefault.ipynb
+++ b/notebooks/ModelCreditCardDefault.ipynb
@@ -85,9 +85,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "from sklearn.metrics import accuracy_score,precision_score,recall_score,f1_score  # for classification\n",
-    "\n",
-    "import kds"
+    "from sklearn.metrics import accuracy_score,precision_score,recall_score,f1_score  # for classification\n"
    ]
   },
   {
