--- a/notebooks/ModelCreditCardDefault.ipynb
+++ b/notebooks/ModelCreditCardDefault.ipynb
@@ -26,7 +26,7 @@
    },
    "outputs": [],
    "source": [
-    "## pip install kds"
+    "! pip install kds"
    ]
   },
   {
@@ -47,8 +47,8 @@
      "status": "ok",
      "timestamp": 1631341378824,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -114,8 +114,8 @@
      "status": "ok",
      "timestamp": 1631341381955,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -137,8 +137,8 @@
      "status": "ok",
      "timestamp": 1631346514989,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -160,8 +160,8 @@
      "status": "ok",
      "timestamp": 1631346519221,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -201,8 +201,8 @@
      "status": "ok",
      "timestamp": 1631346523900,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -250,8 +250,8 @@
      "status": "ok",
      "timestamp": 1631346537124,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -273,8 +273,8 @@
      "status": "ok",
      "timestamp": 1631341508763,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -864,8 +864,8 @@
      "status": "ok",
      "timestamp": 1631346605007,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -895,8 +895,8 @@
      "status": "ok",
      "timestamp": 1631341628653,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -920,8 +920,8 @@
      "status": "ok",
      "timestamp": 1631346611060,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1028,8 +1028,8 @@
      "status": "ok",
      "timestamp": 1631345223162,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1073,8 +1073,8 @@
      "status": "ok",
      "timestamp": 1631345226016,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1096,8 +1096,8 @@
      "status": "ok",
      "timestamp": 1631346665289,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1118,8 +1118,8 @@
      "status": "ok",
      "timestamp": 1631341849100,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1143,8 +1143,8 @@
      "status": "ok",
      "timestamp": 1631346687509,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1232,8 +1232,8 @@
      "status": "ok",
      "timestamp": 1631341897702,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1265,8 +1265,8 @@
      "status": "ok",
      "timestamp": 1631341904266,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1288,8 +1288,8 @@
      "status": "ok",
      "timestamp": 1631341911130,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1312,8 +1312,8 @@
      "status": "ok",
      "timestamp": 1631346713863,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1401,8 +1401,8 @@
      "status": "ok",
      "timestamp": 1631346791352,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1441,8 +1441,8 @@
      "status": "ok",
      "timestamp": 1631346799360,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1530,8 +1530,8 @@
      "status": "ok",
      "timestamp": 1631346822782,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1577,8 +1577,8 @@
      "status": "ok",
      "timestamp": 1631346828448,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1601,8 +1601,8 @@
      "status": "ok",
      "timestamp": 1631346838434,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1631,8 +1631,8 @@
    "outputs": [],
    "source": [
     "# Predecir con el algoritmo entrenado para validar\n",
-    "pred_train=xgb_fit.predict(dtrain, iteration_range=(0, best_iter)) # Prediccion sobre el train\n",
-    "pred_test= xgb_fit.predict(dtest, iteration_range=(0, best_iter)) # Prediccion sobre el test\n",
+    "pred_train=xgb_fit.predict(dtrain) # Prediccion sobre train\n",
+    "pred_test= xgb_fit.predict(dtest) # Prediccion sobre test\n",
     "y_pred_train = [1 if i > .5 else 0 for i in pred_train]\n",
     "y_pred_test = [1 if i > .5 else 0 for i in pred_test]"
    ]
@@ -1773,8 +1773,8 @@
      "status": "ok",
      "timestamp": 1631346883728,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
@@ -1796,8 +1796,8 @@
      "status": "ok",
      "timestamp": 1631346889498,
      "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
+      "displayName": "LC",
+      "photoUrl": "https://lh3.googleusercontent.com",
       "userId": "14331399592622880507"
      },
      "user_tz": 300
