--- a/notebooks/ModelCreditCardDefault.ipynb
+++ b/notebooks/ModelCreditCardDefault.ipynb
@@ -1195,7 +1195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(columns = ['Modelo', 'F1Score'])"
+    "ind = pd.DataFrame(columns = ['Modelo', 'F1Score'])"
    ]
   },
   {
@@ -1205,8 +1205,8 @@
    "outputs": [],
    "source": [
     "f1score=f1_score(y_test,y_pred_test)\n",
-    "df = df.append({'Modelo' : 'LogReg', 'F1Score' : f1score}, ignore_index = True)\n",
-    "df.head()"
+    "ind = ind.append({'Modelo' : 'LogReg', 'F1Score' : f1score}, ignore_index = True)\n",
+    "ind"
    ]
   },
   {
@@ -1263,7 +1263,7 @@
     "tree_expert = DecisionTreeClassifier(\n",
     "                       class_weight=None, \n",
     "                       criterion='gini',\n",
-    "                       max_depth=2,   \n",
+    "                       max_depth=5,   \n",
     "                       max_features=2,     \n",
     "                       max_leaf_nodes=None, \n",
     "                       min_samples_leaf=5, \n",
@@ -1336,8 +1336,8 @@
    "outputs": [],
    "source": [
     "f1score=f1_score(y_test,y_pred_test)\n",
-    "df = df.append({'Modelo' : 'DecisionTree', 'F1Score' : f1score}, ignore_index = True)\n",
-    "df.head()"
+    "ind = ind.append({'Modelo' : 'DecisionTree', 'F1Score' : f1score}, ignore_index = True)\n",
+    "ind"
    ]
   },
   {
@@ -1440,8 +1440,8 @@
    "outputs": [],
    "source": [
     "f1score=f1_score(y_test,y_pred_test)\n",
-    "df = df.append({'Modelo' : 'RandomForest', 'F1Score' : f1score}, ignore_index = True)\n",
-    "df.head()"
+    "ind = ind.append({'Modelo' : 'RandomForest', 'F1Score' : f1score}, ignore_index = True)\n",
+    "ind"
    ]
   },
   {
@@ -1478,104 +1478,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 270,
-     "status": "ok",
-     "timestamp": 1631346822782,
-     "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
-      "userId": "14331399592622880507"
-     },
-     "user_tz": 300
-    },
-    "id": "F0S24xXQfJ78"
-   },
-   "outputs": [],
-   "source": [
-    "# Definir la matriz XGB\n",
-    "import xgboost as xgb\n",
-    "\n",
-    "# Configuramos los datasets\n",
-    "dtrain =  xgb.DMatrix(data=X_train, label = y_train)\n",
-    "dtest   = xgb.DMatrix(data=X_test,   label = y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "f0RmRfqbfQKO"
-   },
-   "outputs": [],
-   "source": [
-    "# Configurar parametros\n",
-    "xgb_params = {\n",
-    "    \"objective\": \"reg:logistic\", # Objetivo del negocio!\n",
-    "    \"eta\": 0.001,\n",
-    "    \"max_depth\": 2,\n",
-    "    \"early_stopping_rounds\":  50,\n",
-    "    \"gamma\": 0.1,\n",
-    "    \"print_every_n\": 50\n",
-    "}\n",
-    "num_rounds = 60"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 288,
-     "status": "ok",
-     "timestamp": 1631346828448,
-     "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
-      "userId": "14331399592622880507"
-     },
-     "user_tz": 300
-    },
-    "id": "HFGQ61p1kxV-"
-   },
-   "outputs": [],
-   "source": [
-    "# Ejecutamos el algoritmo! \n",
-    "watch_list  = [(dtrain,'train'),(dtest,'test')] # Hacen un listado de los datos\n",
-    "xgb_fit = xgb.train(xgb_params, dtrain, num_rounds, watch_list) # Entrenamiento del algoritmo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 294,
-     "status": "ok",
-     "timestamp": 1631346838434,
-     "user": {
-      "displayName": "ANDRE OMAR CHAVEZ PANDURO",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhhoQ1kbFXrI1LHS5aCbnzbQoTSVMlrpsL1-iED=s64",
-      "userId": "14331399592622880507"
-     },
-     "user_tz": 300
-    },
-    "id": "2fMOBOZpfQUF"
-   },
-   "outputs": [],
-   "source": [
-    "# Importancia de Variables\n",
-    "xgb.plot_importance(xgb_fit,importance_type='gain')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_iter = xgb_fit.best_iteration"
+    "import xgboost as xgb\n",
+    "xgb_mod=xgb.XGBClassifier(learning_rate=0.01, max_depth=3,\n",
+    "       min_child_weight=1, n_estimators=50, nthread=-1,\n",
+    "       objective='binary:logistic', seed=0, silent=True, subsample=.8)\n",
+    "xgb_mod.fit(X_train, y_train)"
    ]
   },
   {
@@ -1585,10 +1495,8 @@
    "outputs": [],
    "source": [
     "# Predecir con el algoritmo entrenado para validar\n",
-    "pred_train=xgb_fit.predict(dtrain, iteration_range=(0, best_iter)) # Prediccion sobre el train\n",
-    "pred_test= xgb_fit.predict(dtest, iteration_range=(0, best_iter)) # Prediccion sobre el test\n",
-    "y_pred_train = [1 if i > .5 else 0 for i in pred_train]\n",
-    "y_pred_test = [1 if i > .5 else 0 for i in pred_test]"
+    "y_pred_train=xgb_mod.predict(X_train) # Prediccion sobre train\n",
+    "y_pred_test= xgb_mod.predict(X_test) # Prediccion sobre test"
    ]
   },
   {
@@ -1607,8 +1515,8 @@
    "outputs": [],
    "source": [
     "f1score=f1_score(y_test,y_pred_test)\n",
-    "df = df.append({'Modelo' : 'XGBoost', 'F1Score' : f1score}, ignore_index = True)\n",
-    "df.head()"
+    "ind = ind.append({'Modelo' : 'XGBoost', 'F1Score' : f1score}, ignore_index = True)\n",
+    "ind"
    ]
   },
   {
@@ -1664,9 +1572,9 @@
    "outputs": [],
    "source": [
     "# Configuramos el subset de parametros a trabajar\n",
-    "cv_params = {'max_depth': [2,3,5],\n",
-    "            'subsample':[0.6,0.7,0.8],\n",
-    "             'n_estimators':[100,300,500]}"
+    "cv_params = {'max_depth': [2,3,4],\n",
+    "            'subsample':[0.7,0.8,0.9],\n",
+    "             'n_estimators':[50,100,200]}"
    ]
   },
   {
@@ -1766,8 +1674,8 @@
    "outputs": [],
    "source": [
     "f1score=f1_score(y_test,y_pred_test)\n",
-    "df = df.append({'Modelo' : 'GridSearch', 'F1Score' : f1score}, ignore_index = True)\n",
-    "df.head()"
+    "ind = ind.append({'Modelo' : 'GridSearch', 'F1Score' : f1score}, ignore_index = True)\n",
+    "ind"
    ]
   },
   {
