--- a/notebooks/ModelCreditCardDefault.ipynb
+++ b/notebooks/ModelCreditCardDefault.ipynb
@@ -1010,8 +1010,8 @@
       },
       "outputs": [],
       "source": [
-        "data = df[['EDUCATION_1','SEX','PAY_1','AGE','LIMIT_BAL','SUM_LPAY_REC','STD_LBILL_TOT','CV_LPAY_TOT','CV_LBILL_TOT','STD_LPAY_TOT','CANT_PAY_MAY0','BILL_AMT1','RATE_PAY_BILL1','LOG_BILL_AMT1','SUM_LBILL_REC','AVG_LBILL_TOT','AVG_LPAY_TOT','STD_PAY_TOT','DEFAULT']].sample(frac=0.9, random_state=1000)\n",
-        "data_unseen = df[['EDUCATION_1','SEX','PAY_1','AGE','LIMIT_BAL','SUM_LPAY_REC','STD_LBILL_TOT','CV_LPAY_TOT','CV_LBILL_TOT','STD_LPAY_TOT','CANT_PAY_MAY0','BILL_AMT1','RATE_PAY_BILL1','LOG_BILL_AMT1','SUM_LBILL_REC','AVG_LBILL_TOT','AVG_LPAY_TOT','STD_PAY_TOT','DEFAULT']].drop(data.index)\n",
+        "data = df[['PAY_1','AGE','LIMIT_BAL','SUM_PAY_TOT','CV_LBILL_TOT','CV_LPAY_TOT','AVG_LPAY_TOT','STD_LPAY_TOT','CANT_PAY_MAY0','SUM_LPAY_REC','BILL_AMT1','AVG_LBILL_TOT','DEFAULT']].sample(frac=0.9, random_state=1000)\n",
+        "data_unseen = df[['PAY_1','AGE','LIMIT_BAL','SUM_PAY_TOT','CV_LBILL_TOT','CV_LPAY_TOT','AVG_LPAY_TOT','STD_LPAY_TOT','CANT_PAY_MAY0','SUM_LPAY_REC','BILL_AMT1','AVG_LBILL_TOT','DEFAULT']].drop(data.index)\n",
         "data.reset_index(inplace=True, drop=True)\n",
         "data_unseen.reset_index(inplace=True, drop=True)\n",
         "print('Data for Modeling: ' + str(data.shape))\n",
